--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "chat-app": "file:..",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.13.3",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.8"
   },
